[build-system]
requires = ["setuptools>=42", "wheel", "nodejs-bin==18.4.0a4"]
build-backend = "setuptools.build_meta"

[tool.mypy]
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true

[tool.ruff]
lint.ignore = ["E501"]
lint.isort.known-first-party = ["src", "tests"]
extend-exclude = [".venv/*", ".eggs/*", ".nox/*", "build/*"]
line-length = 120

[tool.pytest.ini_options]
testpaths = "tests"
asyncio_mode = "auto"
